--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://dmitryberesten.github.io/filmoteka",
+  "homepage": "https://MarekLempart.github.io/filmoteka-2023",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /filmoteka/"
+    "build": "parcel build src/*.html --public-url /filmoteka-2023/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dmitryberesten/filmoteka.git"
+    "url": "git+https://github.com/MarekLempart/filmoteka-2023.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
